[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/items/Owl.png" type="Texture" id=1]
[ext_resource path="res://Items/Bat.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 16.0
height = 12.0

[node name="Bat" type="Area2D"]
collision_layer = 0
collision_mask = 2147483652
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = 1.56238
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.99323, 0.37458 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 11.2373, 0.37458 )
rect = Rect2( -24, -24, 36, 48 )
[connection signal="body_entered" from="." to="." method="_on_Bat_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
